--- a/index.html
+++ b/index.html
@@ -1,68 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="Conversation with your friends", initial-scale= "website de relacionamento>"
+    <title>Welcome back you cast going now</title>
 </head>
-
 <body>
-    <!--navbar-->
-    <nav class="navbar navbar-expand-lg dark"data-bs-theme="dark"> 
-        style=" background-image: background-color: #FF0700
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img scr="joystick.png"> GameStation
-            </a>
-            <button class="navbar nvbar-expand-lg" bg-navbar", data-bs-theme=""dark"
-            < div class>"container-fluid">
-            <a class=""navbar-brand" href="#"
-            ></button>
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <!--fim do navbar-->
+    <!--menu superior-->
+    <div class="dropup-center dropup">
+    <div class="dropdown"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+
+ <nav></nav>
+ <li class="page-item"><a class="page-link" href="#">1</a></li>
+
+
+ <!--conteúdo da pagina-->
+ <li class="page-item">"you casting conversation with friends put online call"
+
+ <main>
+    <!--menu lateral-->
+
+    <nav>
+        <ul>
+            <li><a href="#">Cast Now</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Streaming</a></li>
+            <li><a href="#">My List favorite of friends</a></li>
+
+ <aside></aside>
+ <!--imagens dos videos-->
+ 
+
+<div class="container">
+    <div class="row"
+ <figure="col-12 col-md6 col-lg-3>
+  <a class="page-link" href="#" aria-label="Previous"></a>
+
+<img src="IMGrockunsplash.jpg"
+
+    class=rounded mx-auto d-block alt="customerpng"
+ <img src="IMGmargotimgjpg.webp"
+
+ class=rounded mx-auto d-block alt="margotimgjpg" 
+
+Video  class= img-fluid">
+    <img src="filmeimgjpg.webp"
+    
+    class=rounded mx-auto d-block alt="filmeimgjpg"
+<
+</figure>
+
+
+
+    
+
 </body>
 
 </html>
+
